# mamori

./: README.md  pyproject.toml
mamori/: __init__.py  attacks.py  harness.py  languages.py  leaderboard.py  metrics.py  translations.py  translator.py  variants.py
scripts/: make_payloads.py  run_mamori.py  selftest_metrics.py
